<?xml version="1.0"?>
<package format="2">
    <name>yumi_app</name>
    <version>1.0.0</version>
    <description>The yumi_app package</description>

    <!-- One maintainer tag required, multiple allowed, one person per tag --> 
    <!-- Example:  -->
    <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
    <maintainer email="hl18@ic.ac.uk">Haining Luo</maintainer>

    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>
    
    <depend>cmake_modules</depend>
    <depend>interactive_markers</depend>
    <depend>moveit_core</depend>
    <depend>moveit_ros_perception</depend>
    <depend>moveit_ros_planning</depend>
    <depend>moveit_ros_planning_interface</depend>
<!--     <depend>pluginlib</depend> -->
    <depend>roscpp</depend>
    <depend>std_msgs</depend>
    <depend>sensor_msgs</depend>
    <depend>geometry_msgs</depend>
    <depend>trajectory_msgs</depend>
    <depend>message_filters</depend>
    <depend>image_transport</depend>

</package>