<?xml version="1.0"?>
<package format="2">
  <name>unity_connection</name>
  <version>0.0.1</version>
  <description>The unity_connection package</description>


  <maintainer email="hl18@ic.ac.uk">haining</maintainer>

  <license>TODO</license>

  <build_depend>message_generation</build_depend>

  <exec_depend>message_runtime</exec_depend>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>trajectory_msgs</depend>
  <build_depend>roscpp</build_depend>
  <build_depend>ros_tcp_endpoint</build_depend>
  <build_depend>moveit_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>roslaunch</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>ros_tcp_endpoint</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>ros_tcp_endpoint</exec_depend>

  <exec_depend>moveit_ros_move_group</exec_depend>
  <exec_depend>moveit_fake_controller_manager</exec_depend>
  <exec_depend>moveit_kinematics</exec_depend>
  <exec_depend>moveit_planners_ompl</exec_depend>
  <exec_depend>moveit_ros_visualization</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>topic_tools</exec_depend>
  <exec_depend>moveit_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
