<?xml version="1.0"?>
<package format="2">
  <name>unity_robot_client</name>
  <version>0.0.0</version>
  <description>The unity_robot_client package</description>
  <maintainer email="hl18@ic.ac.uk">haining</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>control_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>simple_message</depend>
  <depend>actionlib_msgs</depend>
  <depend>actionlib</depend>
  <depend>urdf</depend>
  <exec_depend>robot_state_publisher</exec_depend>
</package>
